2018-09-04  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.45 released.

	* ebuild-mode.el (ebuild-mode-arch-list): Add arm64 to default.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-08-30  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-portdir): Default to
	/var/db/repos/gentoo with fallback to /usr/portage, bug 662998.

2018-06-23  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.44 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-06-22  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-eapi-list): Add 7.

	* ebuild-mode-keywords.el
	(ebuild-mode-keywords-eclass-documentation): Update keywords
	from eclass-to-manpage.awk.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-eapi-deprecated)
	(ebuild-mode-keywords-0): dolib and libopts are deprecated.
	(ebuild-mode-keywords-eapi7): New variable for EAPI 7 commands.

2018-06-05  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-insert-skeleton): Fold lines as in the
	standard GLEP footer.

2018-04-17  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.43 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2018-04-14  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-insert-skeleton): Use 9999 as dummy GLEP
	number, because XXX causes a warning in docutils-glep. Bug 653126.

2018-02-15  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-run-command):
	* glep-mode.el (glep-mode-format-html): Don't autoload.

2018-01-29  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.42 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* keyword-generation.sh: Automatically update keywords in
	ebuild-mode-keywords.el.
	* ebuild-mode-keywords.el: Insert tokens to mark begin and end
	of automatically generated keywords.

2018-01-28  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-format-html): New command.
	(glep-mode-map): Bind to "C-c C-f".